--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "swr": "^2.1.1"
+    "swr": "^2.1.1",
+    "vite-plugin-pwa": "^0.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
