--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.3",
     "swr": "^2.1.1",
     "vite-plugin-pwa": "^0.15.1"
   },
