--- a/package.json
+++ b/package.json
@@ -15,16 +15,25 @@
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.3",
     "swr": "^2.1.1",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pwa": "^0.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "vite": "^4.2.0"
   }
 }
